home page mockup complete

--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -1,14 +1,41 @@
 <template name="Home_Page">
-  <div class="ui middle aligned centered grid text container">
+  <div class="ui  container">
 
-    <div class="four wide column">
-      <img class="ui small circular image" src="/images/meteor-logo.png"/>
-    </div>
+    <table class="ui celled table">
+      <thead>
+      <tr><th>First</th>
+        <th>Last</th>
+        <th>Address</th>
+        <th>Phone</th>
+        <th>Email</th>
+      </tr></thead>
+      <tbody>
+      <tr>
+        <td>Phillip</td>
+        <td>Johnson</td>
+        <td>1680 East-West Rd, Honolulu, HI</td>
+        <td>808-956-3489</td>
+        <td>johnson@hawaii.edu</td>
+      </tr>
+      <tr>
+        <td>Henri</td>
+        <td>Casanova</td>
+        <td>1680 East-West Rd, Honolulu, HI</td>
+        <td>808-956-2649</td>
+        <td>henric@hawaii.edu</td>
+      </tr>
+      <tr>
+        <td>Kim</td>
+        <td>Binsted</td>
+        <td>1680 East-West Rd, Honolulu, HI</td>
+        <td>808-956-6107</td>
+        <td>binsted@hawaii.edu</td>
+     </tr>
 
-    <div class="eight wide column">
-      <h1>Welcome to this template</h1>
-      <p>Now get to work and modify this app!</p>
-    </div>
+      </tbody>
+      <tfoot>
+    </tfoot>
+    </table>
 
   </div>
 </template>
