--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -1,41 +1,34 @@
 <template name="Home_Page">
   <div class="ui  container">
+    {{#if Template.subscriptionsReady}}
+      <table style="margin-top: 20px" class="ui celled table">
+        <thead>
+        <tr>
+          <th>First</th>
+          <th>Last</th>
+          <th>Address</th>
+          <th>Phones</th>
+          <th>Email</th>
+        </tr>
+        </thead>
 
-    <table class="ui celled table">
-      <thead>
-      <tr><th>First</th>
-        <th>Last</th>
-        <th>Address</th>
-        <th>Phone</th>
-        <th>Email</th>
-      </tr></thead>
-      <tbody>
-      <tr>
-        <td>Phillip</td>
-        <td>Johnson</td>
-        <td>1680 East-West Rd, Honolulu, HI</td>
-        <td>808-956-3489</td>
-        <td>johnson@hawaii.edu</td>
-      </tr>
-      <tr>
-        <td>Henri</td>
-        <td>Casanova</td>
-        <td>1680 East-West Rd, Honolulu, HI</td>
-        <td>808-956-2649</td>
-        <td>henric@hawaii.edu</td>
-      </tr>
-      <tr>
-        <td>Kim</td>
-        <td>Binsted</td>
-        <td>1680 East-West Rd, Honolulu, HI</td>
-        <td>808-956-6107</td>
-        <td>binsted@hawaii.edu</td>
-     </tr>
+        <tbody>
+        {{#each contacts in contactsList}}
+          <tr>
+            <td>{{contacts.first}}</td>
+            <td>{{contacts.last}}</td>
+            <td>{{contacts.address}}</td>
+            <td>{{contacts.phone}}</td>
+            <td>{{contacts.email}}</td>
 
-      </tbody>
-      <tfoot>
-    </tfoot>
-    </table>
+          </tr>
+        {{/each}}
+        </tbody>
+      </table>
+    {{else}}
+      {{> Loading}}
+    {{/if}}
 
+    
   </div>
 </template>
