add contact form

--- a/app/imports/ui/pages/edit-contact-page.html
+++ b/app/imports/ui/pages/edit-contact-page.html
@@ -23,7 +23,7 @@
         <label>Telephone/Email</label>
         <div class="two fields">
           <div class="field">
-            <input type="text" name="phone" placeholder="XXX-XXX-XXXX">
+            <input type="text" name="telephone" placeholder="XXX-XXX-XXXX">
           </div>
           <div class="field">
             <input type="text" name="email" placeholder="foo@bar.com">
