--- a/app/imports/ui/pages/add-contact-page.html
+++ b/app/imports/ui/pages/add-contact-page.html
@@ -1,33 +1,24 @@
 <template name="Add_Contact_Page">
   <div style="margin-top: 20px" class="ui container">
-    <form class="ui form">
+    <form class="ui form contact-data-form   {{ errorClass }}">
       <h4 class="ui dividing header">Contact Information</h4>
       <div class="field">
-        <label>Name</label>
+
         <div class="two fields">
-          <div class="field">
-            <input type="text" name="first" placeholder="First Name">
-          </div>
-          <div class="field">
-            <input type="text" name="Last" placeholder="Last Name">
-          </div>
+          {{> Text_Form_Control label="First" required=true errorMessage=(fieldError "first")}}
+          {{> Text_Form_Control label="Last" required=true errorMessage=(fieldError "last")}}
+
         </div>
       </div>
+      {{> Text_Form_Control label="Address" required=true errorMessage=(fieldError "address")}}
+
       <div class="field">
-        <label>Address</label>
-        <div class="fields">
-          <input type="text" name="address" placeholder="Address">
-        </div>
-      </div>
-      <div class="field">
-        <label>Telephone/Email</label>
+
         <div class="two fields">
-          <div class="field">
-            <input type="text" name="phone" placeholder="XXX-XXX-XXXX">
-          </div>
-          <div class="field">
-            <input type="text" name="email" placeholder="foo@bar.com">
-          </div>
+          {{> Text_Form_Control label="Telephone" required=true errorMessage=(fieldError "telephone")}}
+
+          {{> Text_Form_Control label="Email" required=true errorMessage=(fieldError "email")}}
+
         </div>
       </div>
       <button class="ui button" type="submit">Submit</button>
