--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -7,7 +7,7 @@
           <th>First</th>
           <th>Last</th>
           <th>Address</th>
-          <th>Phones</th>
+          <th>Telephone</th>
           <th>Email</th>
         </tr>
         </thead>
@@ -18,7 +18,7 @@
             <td>{{contacts.first}}</td>
             <td>{{contacts.last}}</td>
             <td>{{contacts.address}}</td>
-            <td>{{contacts.phone}}</td>
+            <td>{{contacts.telephone}}</td>
             <td>{{contacts.email}}</td>
 
           </tr>
