--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -9,6 +9,7 @@
           <th>Address</th>
           <th>Telephone</th>
           <th>Email</th>
+          <th>Edit</th>
         </tr>
         </thead>
 
@@ -20,7 +21,7 @@
             <td>{{contacts.address}}</td>
             <td>{{contacts.telephone}}</td>
             <td>{{contacts.email}}</td>
-
+            <td><a href="{{pathFor 'Edit_Contact_Page' _id=contacts._id}}">Edit</a></td>
           </tr>
         {{/each}}
         </tbody>
